Feature: Create a new image delete dialog

--- a/Resources/translations/wearejust-templates.nl.yml
+++ b/Resources/translations/wearejust-templates.nl.yml
@@ -1,4 +1,2 @@
-dialog_confirm_deletion_title: Bevestig verwijdering
-dialog_confirm_deletion_text: Weet je zeker dat de geselecteerde afbeelding moet worden verwijderd?
-dialog_confirm_deletion_yes: Ja, verwijder
-dialog_confirm_deletion_no: Nee, annuleer
+dialog_confirm_deletion_title: De afbeelding wordt verwijderd na het opslaan van  de pagina.
+dialog_confirm_deletion_revert: Klik hier om de afbeelding terug te halen
