Feature: File remove styling and javascript functionality for better usabilty

--- a/Resources/translations/wearejust-templates.nl.yml
+++ b/Resources/translations/wearejust-templates.nl.yml
@@ -1,2 +1,2 @@
-dialog_confirm_deletion_title: De afbeelding wordt verwijderd na het opslaan van  de pagina.
-dialog_confirm_deletion_revert: Klik hier om de afbeelding terug te halen
+dialog_confirm_deletion_title: Het bestand wordt verwijderd na het opslaan van de pagina.
+dialog_confirm_deletion_revert: Klik hier om het bestand terug te halen
